# EntropyCalculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  runmake
python/: bond_angle.py  entropy.py
src/: .Reader.cpp.swp  .Reader.h.swp  Reader.cpp  Reader.h  main.cpp
